--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 							
 							
 							</td>
-								<td align="center">合格
+								<td align="center">255
 							</td>
 						</tr>
 					</tbody>
